--- a/UniGraphics/Properties/Resources.resx
+++ b/UniGraphics/Properties/Resources.resx
@@ -139,4 +139,19 @@
   <data name="exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Icons\exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Fractal" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fractal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Fractal1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fractal1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Fractal2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fractal2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Fractal3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fractal3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Fractal4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Fractal4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
