--- a/UniGraphics/Properties/Resources.resx
+++ b/UniGraphics/Properties/Resources.resx
@@ -178,4 +178,13 @@
   <data name="pause" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pause.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="movematrix" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\movematrix.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="scalematrix" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\scalematrix.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="turnmatrix" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\turnmatrix.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
